--- a/FoodOrder/src/Form/Login.form
+++ b/FoodOrder/src/Form/Login.form
@@ -69,6 +69,11 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel6">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="F:\MMT\FoodOrder_Project\NetWork_netbean\FoodOrder\pictures\newpng.png"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
