--- a/FoodOrder/src/Form/Login.form
+++ b/FoodOrder/src/Form/Login.form
@@ -71,7 +71,7 @@
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="F:\MMT\FoodOrder_Project\NetWork_netbean\FoodOrder\pictures\newpng.png"/>
+              <Image iconType="2" name="F:\MMT\FoodOrder_Project\NetWork_netbean\asset\newpng.png"/>
             </Property>
           </Properties>
         </Component>
