--- a/FoodOrder/src/Form/ShowProduct.form
+++ b/FoodOrder/src/Form/ShowProduct.form
@@ -144,9 +144,7 @@
                               <Component id="allPaymentVar2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="totalMoney" min="-2" pref="206" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="allPaymentVar" min="-2" pref="72" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -226,7 +224,6 @@
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="allPaymentVar" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                                   <Component id="allPaymentVar2" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                                   <Component id="totalMoney" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                               </Group>
@@ -448,17 +445,6 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="allPaymentVar">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Arial" size="24" style="1"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="99" red="99" type="rgb"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="vnd"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JButton" name="confirmBtn">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
