--- a/FoodOrder/src/Form/Login.form
+++ b/FoodOrder/src/Form/Login.form
@@ -71,7 +71,7 @@
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="F:\MMT\FoodOrder_Project\NetWork_netbean\asset\newpng.png"/>
+              <Image iconType="2" name="E:\Java\NetWork_netbean\asset\newpng.png"/>
             </Property>
           </Properties>
         </Component>
@@ -96,7 +96,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="7" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="getName" min="-2" pref="191" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
               </Group>
